--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.hibernate-c3p0-4.0.0.CR2.jar=C:\\Users\\toisc\\Downloads\\hibernate-c3p0-4.0.0.CR2.jar
 file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Program Files\\NetBeans 8.2\\ide\\modules\\ext\\mysql-connector-java-5.1.23-bin.jar
 includes=**
 j2ee.compile.on.save=true
@@ -46,7 +47,8 @@ jar.compress=false
 javac.classpath=\
     ${libs.primefaces.classpath}:\
     ${libs.hibernate4-support.classpath}:\
-    ${file.reference.mysql-connector-java-5.1.23-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
+    ${file.reference.hibernate-c3p0-4.0.0.CR2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
